[package]
name = "safe_smart_controller_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safe_drive = "0.2"
scgw_msgs = {path = "/tmp/msg/scgw_msgs"}
async-std = { version = "1", features = ["attributes"] }
signal-hook = "0.3.4"
signal-hook-async-std = "0.2"
network_module_util = {git = "https://github.com/hakoroboken/network_module_util.git"}
gethostname = "0.4.3"

[package.metadata.ros]
msg = ["scgw_msgs"]
msg_dir = "/tmp/msg/"
safe_drive_version = "0.2"